Uploaded latest files

--- a/web/themes/custom/jescanada/jescanada.libraries.yml
+++ b/web/themes/custom/jescanada/jescanada.libraries.yml
@@ -6,5 +6,6 @@ framework:
       css/ipad.css: {}
       css/mobile.css: {}
       css/project.css: {}
+      css/user2.css: {}
   js:
     js/simple.js: {}
