--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ web/sites/default/default.settings.php
 web/sites/default/default.services.yml
 web/sites/default/settings.pantheon.php
 web/sites/default/settings.php
+web/sites/default/
